--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,84 @@
+* {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+
+}
+
 body {
-    background-color: green;
-}
-
-.container {
+    /* How to find higher qual imag for the background??? */
+    background-image: url(/imgs/casino\ felt\ background.jpeg);
+    background-repeat: no-repeat;
+    background-size: cover;
     display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
 }
 
-img {
-    width: 100px;
+.title-img {
+    width: 200px;
+    margin: 15px;
+}
+
+.main-game-board {
+    width: 640px;
+    height: 640px;
+    display: flex;
+    flex-wrap: wrap;
+    margin: auto;
+}
+/* Card will take up 25% of the game board since there are many of them. */
+.card {
+    width: calc(25% - 10px);
+    height: calc(33.333% - 10px);
+    position: relative;
+    margin: 5px;
+    transform: scale(1);
+}
+.card:active {
+    transform: scale(.97);
+    transition: .2s;
+}
+
+.front-face {
+    position: absolute;
+   /* These dimensions are to take up the whole space of the card container to stack the imgs. */
+    height: 100%;
+    width: 100%;
+    padding: 20px;
+    border-radius: 5px;
+}
+
+.back-face {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    padding: 20px;
+    border-radius: 5px;
+}
+
+.new-game-btn {
+	background:linear-gradient(to bottom, #4d805a 5%, #5cbf2a 100%);
+	background-color:#4d805a;
+	border-radius:20px;
+	border:1px solid #18ab29;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Verdana;
+	font-size:17px;
+	font-weight:bold;
+	padding:16px 31px;
+	text-decoration:none;
+	text-shadow:0px 2px 5px #2f6627;
+    margin: 15px;
+}
+.new-game-btn:hover {
+	background:linear-gradient(to bottom, #5cbf2a 5%, #4d805a 100%);
+	background-color:#5cbf2a;
+}
+.new-game-btn:active {
+	position:relative;
+	top:1px;
 }
